<resources>
    <string name="app_name">RunningApp</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_0">0</string>
    <string name="textview">TextView</string>
    <string name="details">Details</string>
    <string name="steps">Steps</string>
    <string name="time">Time</string>
    <string name="stepssdisplay">stepssDisplay</string>
    <string name="timeview">timeView</string>
    <string name="stepsdisplay">stepsDisplay</string>
    <string name="reset">Reset</string>
    <string name="_0_">0</string>
    <string name="_0__">0</string>
    <string name="stepsDisplay" />
    <string name="TV1">TextView</string>
    <string name="TV2">TextView</string>
    <string name="TV3">TextView</string>
    <string name="todays_run">Todays Run :</string>
    <string name="calories">Calories</string>
    <string name="meters">Meters:</string>
    <string name="seconds">Seconds</string>
</resources>