<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">


  <TextView
      android:id="@+id/tvTime"
      android:layout_width="77dp"
      android:layout_height="55dp"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/TV1"
      android:textSize="40sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.871"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.238" />

  <TextView
      android:id="@+id/tvCalories"
      android:layout_width="77dp"
      android:layout_height="55dp"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/textview"
      android:textSize="40sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.485"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.238" />

  <TextView
      android:id="@+id/tvMeters"
      android:layout_width="77dp"
      android:layout_height="55dp"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/TV2"
      android:textSize="40sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.11"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.238" />

  <TextView
      android:id="@+id/tvDate"
      android:layout_width="320dp"
      android:layout_height="44dp"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/TV3"
      android:textSize="30sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.473"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.151" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="309dp"
      android:layout_height="78dp"
      android:text="@string/todays_run"
      android:textAppearance="@style/TextAppearance.AppCompat.Display2"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.509"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.024" />

  <TextView
      android:id="@+id/calDisplay"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/calories"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.442"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.317" />

  <TextView
      android:id="@+id/metersDisplay"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/meters"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.101"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.318" />

  <TextView
      android:id="@+id/timeDisplay"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/seconds"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.801"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.317" />


</androidx.constraintlayout.widget.ConstraintLayout>